# new2-a-softh

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/src/main/cpp/pjproject/: .gitignore  pjproject-vs14.sln
app/src/main/cpp/pjproject/.github/workflows/: build.yml
app/src/main/cpp/pjproject/pjlib/src/pj/: ssl_sock_mbedtls.c  ssl_sock_schannel.c
app/src/main/cpp/pjproject/pjsip-apps/src/pjsua/android/jni/: Makefile
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/pjsua2maui/: pjsua2maui.sln
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/pjsua2maui/pjsua2maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MauiProgram.cs  pjsua2maui.csproj
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/pjsua2maui/pjsua2maui/Controls/: CallView.cs
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/pjsua2maui/pjsua2maui/Messages/: AddBuddyMessage.cs  EditBuddyMessage.cs  SaveAccountConfigMessage.cs  UpdateCallStateMessage.cs  UpdateMediaCallStateMessage.cs
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/pjsua2maui/pjsua2maui/Models/: ISoftObserver.cs  SoftAccount.cs  SoftAccountConfig.cs  SoftAccountConfigModel.cs  SoftApp.cs  SoftBuddy.cs  SoftCall.cs  SoftLogWriter.cs
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/pjsua2maui/pjsua2maui/ViewModels/: AVConfigViewModel.cs  AccountConfigViewModel.cs  BaseViewModel.cs  BuddyConfigViewModel.cs  BuddyViewModel.cs
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/pjsua2maui/pjsua2maui/Views/: AccountConfigPage.xaml  BuddyConfigPage.xaml  BuddyPage.xaml  BuddyPage.xaml.cs  CallPage.xaml  CallPage.xaml.cs
app/src/main/cpp/pjproject/pjsip-apps/src/swig/csharp/sample/SimplePjsua2CS/: PjSample.cs
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/: build.gradle
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/app/: build.gradle
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/app-kotlin/: build.gradle
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/app-kotlin/src/main/java/org/pjsip/pjsua2/app_kotlin/: MainActivity.kt
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/app-kotlin/src/main/res/layout/: activity_main.xml
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/app/src/main/res/layout/: activity_main.xml  dlg_account_config.xml  dlg_add_buddy.xml
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/app/src/main/res/menu/: main.xml
app/src/main/cpp/pjproject/pjsip-apps/src/swig/java/android/pjsua2/: build.gradle
app/src/main/cpp/pjproject/pjsip/src/pjsip-ua/: sip_reg.c
app/src/main/cpp/pjproject/pjsip/src/pjsua-lib/: pjsua_media.c
app/src/main/res/layout/: activity_call.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
(+4 files in other folders)
